--- a/css/style.css
+++ b/css/style.css
@@ -940,7 +940,7 @@ video {
 /* la fin du style de la page actualité  */
 
 .section {
-    height: 90vh;
+    height: 100vh;
 
 }
 
@@ -955,8 +955,9 @@ video {
     ;
     background-image: url(/img/bg-section-one.png);
     background-position: center;
+    gap: 50px;
     padding: 20px 5px;
-
+    
 }
 
 .headeSctionOne {
@@ -965,6 +966,7 @@ video {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    
 }
 
 .titelePage {
@@ -994,6 +996,7 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .statistiquesTitel {
@@ -1075,17 +1078,17 @@ video {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: -60px;
+    top: -40px;
 }
 
 .keyMap h2 {
     align-self: flex-end;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .keyMap h4 {
     align-self: flex-end;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .lestColler {
